<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CommonButtonFragment">
　<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1135677094589057/6842774244">
    </com.google.android.gms.ads.AdView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btToday"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_today"
            android:text="@string/today"
            app:bootstrapBrand="secondary" />
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btHistory"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_history"
            android:text="@string/histories"
            app:bootstrapBrand="secondary" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btCreate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_add"
            android:text="@string/create"
            app:bootstrapBrand="secondary" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btRandom"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_random"
            android:text="@string/random"
            app:bootstrapBrand="secondary" />
    </LinearLayout>
</LinearLayout>

</FrameLayout>